add_subdirectory(common)
add_subdirectory(act_license)
add_subdirectory(database)
add_subdirectory(algorithm)

add_subdirectory(http_server)

add_subdirectory(opcua)

add_subdirectory(topology)
add_subdirectory(device_configuration)
add_subdirectory(auto_probe)
add_subdirectory(monitor)
add_subdirectory(southbound)
add_subdirectory(deploy)
add_subdirectory(service_platform_restful_client)
add_subdirectory(core)
add_subdirectory(intelligent)
add_subdirectory(mqtt_client)
add_subdirectory(moxa_application_framework_restful_client)
add_subdirectory(offline_config)
